--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,10 +15,12 @@ set -g @dracula-border-contrast true
 set -g @dracula-cpu-usage-colors "orange dark_gray"
 set -g @dracula-ram-usage-colors "pink dark_gray"
 set -g @dracula-battery-colors "dark_purple white"
+set -g @dracula-show-left-icon session
 
 set -g @dracula-battery-label "Battery"
 
-
+# make tmux save sessions
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 
 
