--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,8 @@
+
+# use the default shell (either bash or tmux)
+set-option -g default-shell /usr/bin/zsh
+set -g default-command /usr/bin/zsh
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
