--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,6 +27,7 @@ set -g @dracula-battery-label "Battery"
 # make tmux save sessions
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
+set -g @plugin 'tmux-plugins/tmux-yank'
 
 
 set -g history-limit 5000
