--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,3 @@
-
-# use the default shell (either bash or tmux)
 set-option -g default-shell /usr/bin/zsh
 set -g default-command /usr/bin/zsh
 
@@ -9,20 +7,6 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 
-set -g @plugin 'dracula/tmux'
-# Set 256 colors
-set -s default-terminal 'tmux-256color'
-
-# dracula plugin configs
-set -g @dracula-plugins "ram-usage cpu-usage battery"
-
-set -g @dracula-border-contrast true
-set -g @dracula-cpu-usage-colors "orange dark_gray"
-set -g @dracula-ram-usage-colors "pink dark_gray"
-set -g @dracula-battery-colors "dark_purple white"
-set -g @dracula-show-left-icon session
-
-set -g @dracula-battery-label "Battery"
 
 # make tmux save sessions
 set -g @plugin 'tmux-plugins/tmux-resurrect'
@@ -34,8 +18,17 @@ set -g history-limit 5000
 
 setw -g mouse on
 
+# make status bar transparent
+set -g status-style bg=default
 
+# vim keybindings in copy mode
+setw -g mode-keys vi
+
+# simulate vim keybindings in tmux copy mode
+bind -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi y send -X copy-selection-and-cancel
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel
+bind P paste-buffer
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
-
