solve tmux session name length problem

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,6 +24,10 @@ set -g status-style bg=default
 # vim keybindings in copy mode
 setw -g mode-keys vi
 
+# extend tmux session name (status)
+set -g status-left-length 70 # could be any number
+
+
 # simulate vim keybindings in tmux copy mode
 bind -T copy-mode-vi v send -X begin-selection
 bind-key -T copy-mode-vi y send -X copy-selection-and-cancel
