--- a/.ideavimrc
+++ b/.ideavimrc
@@ -38,9 +38,11 @@ set timeoutlen=1000
 " Map leader<p> to last yanked register
 map <leader>p "0p
 
-" Go to super method (interface declaration)
+" Go from method implementation to super method (interface)
 map gs <Action>(GotoSuperMethod)
 
+" Go from interface to method implementation 
+map gb <Action>(GotoImplementation)
 
 "" -- Map IDE actions to IdeaVim -- https://jb.gg/abva4t
 "" Map \r to the Reformat Code action
