--- a/.ideavimrc
+++ b/.ideavimrc
@@ -41,15 +41,19 @@ map <leader>p "0p
 " Go from method implementation to super method (interface)
 map gs <Action>(GotoSuperMethod)
 
-" Go from interface to method implementation 
+" Go from interface to method implementation
 map gb <Action>(GotoImplementation)
 
-"" -- Map IDE actions to IdeaVim -- https://jb.gg/abva4t
-"" Map \r to the Reformat Code action
-map <leader>r <Action>(ReformatCode)
+" -- Map IDE actions to IdeaVim -- https://jb.gg/abva4t
 
-"" Map <leader>d to start debug
+" Reformat code
+map <leader>f <Action>(ReformatCode)
+
+" refactor name of the current element (variable,method,class).
+map <leader>r <Action>(RenameElement)
+
+" Map <leader>d to start debug
 "map <leader>d <Action>(Debug)
 
-"" Map \b to toggle the breakpoint on the current line
+" Map \b to toggle the breakpoint on the current line
 "map \b <Action>(ToggleLineBreakpoint)
