--- a/.ideavimrc
+++ b/.ideavimrc
@@ -3,6 +3,8 @@ let mapleader = " "
 
 """ --- Plugins ---
 
+call plug#begin()
+
 " Highlight copied text
 Plug 'machakann/vim-highlightedyank'
 " Commentary plugin
@@ -10,7 +12,24 @@ Plug 'tpope/vim-commentary'
 " Nerd tree
 Plug 'preservim/nerdtree'
 " Surround words with " ,' ,( ,{ ,etc....
-Plug 'tpope/vim-surround
+Plug 'tpope/vim-surround'
+
+Plug 'nvim-tree/nvim-web-devicons' " Recommended (for coloured icons)
+" Plug 'ryanoasis/vim-devicons' " Icons without colours
+Plug 'akinsho/bufferline.nvim', { 'tag': '*' }
+
+Plug 'ayu-theme/ayu-vim' "
+
+Plug 'junegunn/fzf'
+Plug 'junegunn/fzf.vim'
+
+Plug 'tpope/vim-fugitive'
+
+Plug 'lewis6991/gitsigns.nvim'
+
+Plug 'voldikss/vim-floaterm'
+
+call plug#end()
 
 
 "" -- Suggested options --
@@ -46,36 +65,8 @@ nnoremap S "_diwP
 " Map leader<p> to last yanked register
 map <leader>p "0p
 
-" Go from method implementation to super method (interface)
-map gs <Action>(GotoSuperMethod)
-
-" Go from interface to method implementation
-map gb <Action>(GotoImplementation)
-
-" Override the super methods
-map <leader>o <Action>(OverrideMethods)
-
-" Implement super methods
-map <leader>i <Action>(ImplementMethods)
-
-" -- Map IDE actions to IdeaVim -- https://jb.gg/abva4t
-
-" Reformat code
-map <leader>rf <Action>(ReformatCode)
-
-" refactor name of the current element (variable,method,class).
-map <leader>rr <Action>(RenameElement)
-
-" create a method from the selected code.
-map <leader>rm <Action>(ExtractMethod)
-
-" create a variable from the selected value.
-map <leader>rv <Action>(IntroduceVariable)
-
-" create a filed (class variable) from the selected value.
-map <leader>rf <Action>(IntroduceField)
-
-map <leader>t <Action>(ActivateTerminalToolWindow)
+" open terminal with leader + t
+noremap <leader>t :vert term<cr>
 
 
 " Nerd tree shortcuts
@@ -91,17 +82,80 @@ noremap <C-n> :NERDTreeFind<cr>
 " Type s + <brackets> to surround current word (word under cursor) with the desired brackets.
 nmap s ysiw
 
+" Tab to go to next buffer
+nmap <Tab> :bnext<cr> 
+
+" SHIFT + tab to go to previous buffer
+nmap <S-Tab> :bprev<cr> 
+
 " Surround the selected words with brackets in visual mode.
 vmap s S
 
-" CTRL + l to go to next tab
-nmap <Tab> <Action>(NextTab)
+"Show line numbers
+set number
 
-" CTRL + h to go to prev tab
-nmap <C-Tab> <Action>(PreviousTab)
+"Set encoding to utf
+set encoding=utf-8
+
+"Type undo to undo all the changes you did to the file
+set undofile
+
+set nocompatible              " be iMproved, required
+filetype off                  " required
+
+set termguicolors     " enable true colors support
+
+set background=dark
+
+let ayucolor="dark"   " for dark version of theme
+colorscheme ayu
+
+" Search in the files history list
+nnoremap <C-e> :History<CR>
+
+:tnoremap jj <C-\><C-n>
+
+" Bufferline extension
+set termguicolors
+lua << EOF
+require("bufferline").setup{}
+EOF
+
+"Syntax highlighting
+syntax on
+
+set ma
+
+"ctrl + w + = to zoom current splitted window
+noremap <C-w>= <c-w>_ \| <c-w>\|
+
+" ctrl + w + - to zoom out current splitted window and make all window equal in size
+noremap <C-w>- <c-w>=
+
+" Make adjusing split sizes a bit more friendly
+noremap <silent> <C-Left> :vertical resize +3<CR>
+noremap <silent> <C-Right> :vertical resize -3<CR>
+noremap <silent> <C-Up> :resize +3<CR>
+noremap <silent> <C-Down> :resize -3<CR>
+
+" Quit current opened buffer 
+noremap  qw :bd<CR>
+
+
+" Going to next/prev wrapped lines with j/k
+map j gj
+map k gk
+
+" Open split on the right instead of default left vim behaviour
+set splitright
+
+" Open split on the below instead of default up vim behaviour
+set splitbelow
+
+lua << EOF
+require("gitsigns").setup{}
+EOF
+
+set history=1000
 
 set clipboard=unnamedplus
-
-nmap <C-w>= <Action>(MaximizeEditorInSplit);
-
-nmap <C-w>- <Action>(MaximizeEditorInSplit);
